<resources>
    <string name="app_name">AppCamaleon</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navegation">Navegation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Navegacion -->
    <string name="bt_lb_ingresar_pedido">\n Ingresar \n Pedido</string>
    <string name="title_activity_rutad">Map</string>
    <string name="title_activity_ruta_de_clientes">Ruta de Clientes</string>
    <string name="title_activity_ubicacion_cliente">Ubicación Cliente</string>

    <string name="labelVendedor">Vendedor: </string>
    <string name="nameVendedor">Wilson Olmedo Quinto Gutierrez</string>
    <string name="labelFecha">Fecha: </string>
    <string name="labelCliente">Cliente:</string>
    <string name="labelAgregarProducto">Agregar Producto</string>
    <string name="labelAgregar">Agregar</string>
    <string name="labelBuscarProducto">Buscar Producto</string>
    <string name="labelCantidad">Cantidad</string>
    <string name="labelGuardarPedido">Guardar Pedido</string>
    <string name="labelPedido">Pedido</string>
    <string name="labelIvan">I.V.A</string>
    <string name="labelTotal">Total</string>
    <string name="labelSubtotal">SUBTOTAL</string>
    <string name="labelAhorro">AHORRO</string>
    <string name="labelPromocion">PROMOCIÓN:</string>
    <string name="labelBuscar">Buscar</string>
    <string name="labelPendiente">Pendiente</string>
</resources>
