<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListaProductos">

    <include android:id="@+id/miActionBar" layout="@layout/actionbar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:layout_height="wrap_content"
            android:gravity="left">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/labelVendedor"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:singleLine="true"
                android:text="@string/nameVendedor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/labelFecha"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorText"/>
            <TextView
                android:id="@+id/textFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="2018-07-24"/>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorSeparador" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="center_horizontal|center_vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:weightSum="4">

    <AutoCompleteTextView
        android:id="@+id/edit_buscar_producto"
        android:imeOptions="flagNoExtractUi"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:hint="@string/labelBuscarProducto"
        android:singleLine="true"
        android:focusableInTouchMode="true"
        android:completionThreshold="3"/>

    <Button
        android:id="@+id/bt_buscar_producto"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_small_agregar"
        android:text="@string/labelBuscar"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewProductos"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>