<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.PedidoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/layout_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="left|center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/labelCliente"
                    android:textAllCaps="true"
                    android:textColor="@color/colorText"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/nameVendedor"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="right|center_vertical">

                <Button
                    android:id="@+id/agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_margin="2dp"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_add_pedido"
                    android:drawableTint="@color/colorAccent"
                    android:text="Producto"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>


        </LinearLayout>


        <!-- Place your layout here -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/tableLayoutProducto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_total"
            android:layout_below="@+id/layout_cliente">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/bottom_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <TableLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_column="0"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/labelAhorro"/>
                                <TextView
                                    android:id="@+id/textAhorro"
                                    android:layout_column="1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="$0.00"/>

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_column="0"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/labelSubtotal"/>
                                <TextView
                                    android:id="@+id/textSubtotal"
                                    android:layout_column="1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="$0.00"/>

                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2">

                                <TextView
                                    android:layout_column="0"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/labelIvan"/>
                                <TextView
                                    android:id="@+id/textIva"
                                    android:layout_column="1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="$0.00"/>


                            </TableRow>

                        </TableLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:text="@string/labelTotal"/>
                            <TextView
                                android:id="@+id/textTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="26sp"
                                android:gravity="center"
                                android:textColor="@color/colorAccent"
                                android:text="$0.00"/>

                        </LinearLayout>

                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/bt_ingresar_pendiente"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/btn_small_transparent_producto"
                    android:text="@string/labelPendiente"
                    android:textAllCaps="false"
                    android:textColor="@color/colorText"/>

                <Button
                    android:id="@+id/bt_ingresar_pedido"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:background="@drawable/btn_small_guardar_producto"
                    android:text="@string/labelGuardarPedido"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>