<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardProducto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/itemProductoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/itemCaracteristicasLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:layout_marginBottom="5dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/productoPresentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:layout_marginBottom="5dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/productoPrecioUnitario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAllCaps="true" />
            <EditText
                android:imeOptions="flagNoExtractUi"
                android:id="@+id/productoCantidad"
                android:inputType="number"
                android:singleLine="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp">






            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/ic_user_cliente"/>

                    <TextView
                        android:id="@+id/productoPromocion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/labelPromocion"
                        android:textColor="@android:color/holo_orange_light"/>




            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingRight="25dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/bt_ing_producto"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/btn_small_agregar"
                    android:text="@string/labelAgregar"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
